--- a/index.html
+++ b/index.html
@@ -4,22 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom Demo</title>
+    <style>
+        body{
+            text-align: center;
+            background-color: #1e1e1e;
+            color: white;
+        }
+        .highlight{
+            background-color: yellow;
+            color:black;
+        }
+    </style>
 </head>
 <body>
+    <h1>JavaScript DOM Examples</h1>
+    <!-- Example 1 : Accessing DOM Element -->
+    <selection id="example-1">
+        <h2>Accessing DOM Elements</h2>
+        <p id="myParagraph">
+            This is a paragraph. Click the button to change me!
+        </p>
+        <button id="changetextbutton">Change Text</button>
+    </selection>
 
-    <div class="main">
-        <div class="nav">
-            <p id="para1">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, repudiandae!
-            </p>
-            <p id="para2">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa eligendi excepturi tenetur omnis ea aliquid quam doloribus provident aliquam? Veritatis!
-            </p>
-            <button>Login</button>
-        </div>
-        
-    </div>
-     
+    <!-- Traversing the DOM -->
+    <selection id="example-2">
+        <h2>Traversing the DOM</h2>
+        <ul id="citiesList">
+            <li>New York</li>
+            <li>Tokya</li>
+            <li>Paris</li>
+            <li>London</li>
+        </ul>
+        <button id="highlightFirstCity">Highlight First city</button>
+    </selection>
+    <selection id="example-3">
+
+    </selection>
     <script src="script.js"></script>
 </body>
 </html>
