--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button id="changetextbutton">Change Text</button>
     </selection>
 
-    <!-- Traversing the DOM -->
+    <!-- Example 2 : Traversing the DOM -->
     <selection id="example-2">
         <h2>Traversing the DOM</h2>
         <ul id="citiesList">
@@ -38,9 +38,39 @@
         </ul>
         <button id="highlightFirstCity">Highlight First city</button>
     </selection>
-    <selection id="example-3">
 
+    <!-- Example 3 : Manipulating DOM Elements -->
+    <selection id="example-3">
+        <h2>Manipulating DOM Elements</h2>
+        <div id="coffeeOrder">Order:
+            <span id="coffeeType">Latte</span>
+        </div>
+        <button id="changeOrder">Change Order to Espresso</button>
     </selection>
+
+
+    <!-- Example 4 : Creating and Inserting Elements -->   
+    <selection id="example-4">
+        <h2>Creating and Inserting Elements</h2>
+        <button id="addNewItem">Add a new item to the shoping list</button>
+        <ul id="shoppingList">
+            <li>Bread</li>
+            <li>Milk</li>
+        </ul>
+    </selection>
+
+    <!-- Example 5 : Removing DOM Elements -->   
+    <selection id="example-5">
+        <h2>Removing DOM Elements</h2>
+        <ul id="taskList">
+            <li>Task 1</li>
+            <li>Task 2</li>
+            <li>Task 3</li>
+        </ul>
+        <button id="removeLastTask">Remove Last Task</button>
+    </selection>
+
+
     <script src="script.js"></script>
 </body>
 </html>
