--- a/index.html
+++ b/index.html
@@ -71,6 +71,52 @@
     </selection>
 
 
+    <!-- Example 6 : Event Handling in the DOM -->   
+    <selection id="example-6">
+        <h2>Event Handling in the DOM </h2>
+        <button id="clickMeButton">Click Me!</button>
+    </selection>
+
+
+    <!-- Example 7 : Event Delegation -->   
+    <selection id="example-7">
+        <h2>Event Delegation</h2>
+        <ul id="teaList">
+            <li class="teaItem">Green Tea</li>
+            <li class="teaItem">Black Tea</li>
+            <li class="teaItem">Oolong Tea</li>
+        </ul>
+        <p>Click on any tea to select it!</p>
+        
+    </selection>
+
+
+
+    <!-- Example 8 : Form Handling -->   
+    <selection id="example-8">
+        <h2>Form Handling</h2>
+        <form id="feedbackForm">
+            <label for="feedbackInput">Your Feedback:</label>
+            <input type="text" id="feedbackInput" placeholder="Enter Feedback">
+            <button type="submit">submit Feedback</button>
+            <p id="feedbackDisplay"></p>
+        </form>
+    </selection>
+
+
+    <!-- Example 9 : DOM Content Loaded-->   
+    <selection id="example-9">
+        <h2>DOM Content Loaded</h2>
+        <p id="domStatus">Waiting for DOM to load...</p>
+    </selection>
+
+    <!-- Example 9 : CSS Classes Manipulation -->   
+    <selection id="example-10">
+        <h2>CSS Classes Manipulation </h2>
+        <p id="descriptionText">This text will change color!</p>
+        <button id="toggleHighlight">Toggle Highlight</button>
+    </selection>
+
     <script src="script.js"></script>
 </body>
 </html>
